# ai-slicer-assistant

./: .gitignore  README.md  pyproject.toml  requirements.txt
src/aislicer/: cli.py
src/aislicer.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/aislicer/core/: normalize.py  parse.py  prompting.py  retry.py
src/aislicer/core/providers/: base.py  openai_provider.py  stub.py
src/aislicer/eval/: evaluator.py  report.py
src/aislicer/prompts/v1/: system.txt  user_template.txt
src/aislicer/tasks/slicer_v1/: scenarios.jsonl  schema.py  validators.py
src/aislicer/telemetry/: storage.py
