[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "aislicer"
version = "0.0.1"
description = "AI Slicer Assistant - constrained generation + evaluation harness"
requires-python = ">=3.12"
dependencies = [
  "typer",
  "pydantic",
  "rich",
  "sqlalchemy",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
target-version = ["py312"]
